# azure-c-shared-utility

./: CMakeLists.txt
adapters/: httpapi_compact.c  socketio_win32.c
c/adapters/: socketio_mbed.c
c/src/: tlsio_schannel.c
sample/: CMakeLists.txt  main.c
samples/: CMakeLists.txt
samples/xio_open/: CMakeLists.txt  main.c
tests/socketio_win32_unittests/: socketio_win32_unittests.cpp
